build/log/idf_py_stdout_output_16464
Command: ninja flash
[1/10] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D D:\testf\build\bootloader\esp-idf\esptool_py && d:\Espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe D:/esp/v5.5.3/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x0 D:/testf/build/bootloader/bootloader.bin"
Bootloader binary size 0x5160 bytes. 0x2ea0 bytes (36%) free.
[2/10] No install step for 'bootloader'
[3/10] Completed 'bootloader'
[4/10] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/testf.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/testf.c.obj 
ccache D:\Espressif\tools\xtensa-esp-elf\esp-14.2.0_20251107\xtensa-esp-elf\bin\xtensa-esp32s3-elf-g++.exe -DESP_PLATFORM -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -DUNITY_INCLUDE_CONFIG_H -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -ID:/testf/build/config -ID:/testf/main -ID:/esp/v5.5.3/esp-idf/components/newlib/platform_include -ID:/esp/v5.5.3/esp-idf/components/freertos/config/include -ID:/esp/v5.5.3/esp-idf/components/freertos/config/include/freertos -ID:/esp/v5.5.3/esp-idf/components/freertos/config/xtensa/include -ID:/esp/v5.5.3/esp-idf/components/freertos/FreeRTOS-Kernel/include -ID:/esp/v5.5.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/esp/v5.5.3/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -ID:/esp/v5.5.3/esp-idf/components/freertos/esp_additions/include -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/include -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/include/soc -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/include/soc/esp32s3 -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/dma/include -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/ldo/include -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/debug_probe/include -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/power_supply/include -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/port/esp32s3/. -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/port/esp32s3/include -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/. -ID:/esp/v5.5.3/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32s3/include -ID:/esp/v5.5.3/esp-idf/components/heap/include -ID:/esp/v5.5.3/esp-idf/components/heap/tlsf -ID:/esp/v5.5.3/esp-idf/components/log/include -ID:/esp/v5.5.3/esp-idf/components/soc/include -ID:/esp/v5.5.3/esp-idf/components/soc/esp32s3 -ID:/esp/v5.5.3/esp-idf/components/soc/esp32s3/include -ID:/esp/v5.5.3/esp-idf/components/soc/esp32s3/register -ID:/esp/v5.5.3/esp-idf/components/hal/platform_port/include -ID:/esp/v5.5.3/esp-idf/components/hal/esp32s3/include -ID:/esp/v5.5.3/esp-idf/components/hal/include -ID:/esp/v5.5.3/esp-idf/components/esp_rom/include -ID:/esp/v5.5.3/esp-idf/components/esp_rom/esp32s3/include -ID:/esp/v5.5.3/esp-idf/components/esp_rom/esp32s3/include/esp32s3 -ID:/esp/v5.5.3/esp-idf/components/esp_rom/esp32s3 -ID:/esp/v5.5.3/esp-idf/components/esp_common/include -ID:/esp/v5.5.3/esp-idf/components/esp_system/include -ID:/esp/v5.5.3/esp-idf/components/esp_system/port/soc -ID:/esp/v5.5.3/esp-idf/components/esp_system/port/include/private -ID:/esp/v5.5.3/esp-idf/components/xtensa/esp32s3/include -ID:/esp/v5.5.3/esp-idf/components/xtensa/include -ID:/esp/v5.5.3/esp-idf/components/xtensa/deprecated_include -ID:/esp/v5.5.3/esp-idf/components/lwip/include -ID:/esp/v5.5.3/esp-idf/components/lwip/include/apps -ID:/esp/v5.5.3/esp-idf/components/lwip/include/apps/sntp -ID:/esp/v5.5.3/esp-idf/components/lwip/lwip/src/include -ID:/esp/v5.5.3/esp-idf/components/lwip/port/include -ID:/esp/v5.5.3/esp-idf/components/lwip/port/freertos/include -ID:/esp/v5.5.3/esp-idf/components/lwip/port/esp32xx/include -ID:/esp/v5.5.3/esp-idf/components/lwip/port/esp32xx/include/arch -ID:/esp/v5.5.3/esp-idf/components/lwip/port/esp32xx/include/sys -ID:/esp/v5.5.3/esp-idf/components/esp_driver_gpio/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_spi/include -ID:/esp/v5.5.3/esp-idf/components/esp_pm/include -ID:/esp/v5.5.3/esp-idf/components/esp_timer/include -ID:/testf/components/esp32_BNO08x -ID:/testf/components/esp32_BNO08x/include -ID:/testf/components/esp32_BNO08x/include/report -ID:/testf/components/esp32_BNO08x/include/callback -ID:/testf/components/esp32_BNO08x/SH2 -ID:/esp/v5.5.3/esp-idf/components/driver/deprecated -ID:/esp/v5.5.3/esp-idf/components/driver/i2c/include -ID:/esp/v5.5.3/esp-idf/components/driver/touch_sensor/include -ID:/esp/v5.5.3/esp-idf/components/driver/twai/include -ID:/esp/v5.5.3/esp-idf/components/driver/touch_sensor/esp32s3/include -ID:/esp/v5.5.3/esp-idf/components/esp_ringbuf/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_pcnt/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_gptimer/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_mcpwm/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_ana_cmpr/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_i2s/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_sdmmc/include -ID:/esp/v5.5.3/esp-idf/components/sdmmc/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_sdspi/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_sdio/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_dac/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_rmt/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_tsens/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_sdm/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_i2c/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_uart/include -ID:/esp/v5.5.3/esp-idf/components/vfs/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_ledc/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_parlio/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_usb_serial_jtag/include -ID:/esp/v5.5.3/esp-idf/components/esp_driver_twai/include -ID:/esp/v5.5.3/esp-idf/components/cmock/CMock/src -ID:/esp/v5.5.3/esp-idf/components/unity/include -ID:/esp/v5.5.3/esp-idf/components/unity/unity/src -mlongcalls  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=D:/testf=. -fmacro-prefix-map=D:/esp/v5.5.3/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -fuse-cxa-atexit -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/testf.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\testf.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/testf.c.obj -c D:/testf/main/testf.c
D:/testf/main/testf.c:25:8: error: 'spi_device_handle_t' does not name a type; did you mean 'gpio_isr_handle_t'?
   25 | static spi_device_handle_t ms5611_spi_dev __attribute__((unused));
      |        ^~~~~~~~~~~~~~~~~~~
      |        gpio_isr_handle_t
D:/testf/main/testf.c:26:8: error: 'ms5611_t' does not name a type
   26 | static ms5611_t ms5611 __attribute__((unused));
      |        ^~~~~~~~
ninja: build stopped: subcommand failed.
